Fix: width of 620 is still too big, 618 is better

--- a/src/VerseValidator.css
+++ b/src/VerseValidator.css
@@ -2,7 +2,7 @@
   padding: 5px;
   border: 1px;
   border-style: solid;
-  max-width: 620px;
+  max-width: 618px;
 }
 
 .title-box {
